--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
     <p>Ar-condicionado manual, direção hidráulica, freios ABS com EBD?, airbags frontais (dois) e de joelho (motorista), laterais (dois) e de cortina (dois), bloqueio do diferencial traseiro (com acionamento elétrico), coluna de direção com regulagem de altura e profundidade, medidor de economia, imobilizador por código eletrônico na chave, chave tipo canivete, retrovisores externos com ajuste elétrico, display áudio com tela de 8" sensível ao toque, rádio com MP3, entrada USB, conexão Bluetooth® e conectividade Android Auto e Apple CarPlay, controle eletrônico de estabilidade (VSC?) e de tração (A-TRC?), assistente de reboque (TSC?), de subida (HAC?), acendimento automático dos faróis com temporizador (follow me home) e luz de condução diurna.</p>
     
     </p>
-<p>Segundo <i>parágrafo</i> do meu site</p>
-<p>Terceiro <u>Parágrafo</u>do meu site</p>
 
-<a href="">Site da Toyona</a>
+
+<a href="https://www.toyota.com.br/">Site da Toyona</a>
 </body>
 </html>
